test/fail/else_no_if.min
program start
    else 2! fi
end
